syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo.grpc";
option java_outer_classname = "OrderProto";

service OrderService {
  rpc GetOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string orderId = 1;
}

message OrderResponse {
  string orderId = 1;
  string productName = 2;
  double price = 3;
}
